# agentic-workflow-tracing

./: .gitignore  CONTROLLER_TRACING_PLAN.md  Overview.md  PHASE3_DAG_AND_PARALLELISM.md  README.md  STORAGE_PLACEMENT.md  analyze_codebase_pi.py  axis_metric_mapping.md  axis_metric_mapping_sections_0_2_en.md  build_phase_index.py  config.env  config_genomas.env  config_genomas_phase5.env  config_sragent.env  config_sragent_all_readme.env  config_sragent_paper.env  deploy_scilink_to_client.sh  deploy_sragent_to_client.sh  extract_phases.py  langchain_tool_logger.py  parse_strace.py  pyproject.toml  requirements.txt  setup_lustre.sh  setup_lustre_ost_client_only.sh  setup_lustre_simple.sh  summarize_pi_events.py  trace_script_bcc_genomas.sh  trace_script_bcc_pi.sh  trace_script_bcc_scilink.sh  trace_script_bcc_sragent.sh  visualize_strace.py
Plans/: Agentic-vs-Traditional-IO-Pattern-Comparison-Plan.md  Classic-Workflow-Comparison-Plan.md  Figure-Cleanup-Plan.md  Index-Rework-Plan.md  Methodology-Bottleneck-Analysis.md  Phase1-2-Metrics-Attribution-Plan.md  Phase1-CMBAgent-Plan.md  Phase1-GEO-Fanout-Plan.md  Phase1-Plan.md  Remaining-Bugs-Plan.md  VFS-Offset-and-Fixes-Plan.md  figures.md
config/: config.env  config_1000genome.env  config_chemgraph.env  config_genomas.env  config_genomas_fanout.env  config_genomas_phase5.env  config_scilink.env  config_sragent.env  config_sragent_all_readme.env  config_sragent_paper.env
docs/: TIME_TAXONOMY_AND_RESOURCE_BREAKDOWN.md
fixtures/: accessions.csv
scripts/: deploy_chemgraph_to_client.sh  deploy_genomas_to_client.sh  deploy_scilink_to_client.sh  (+12 more)
(+80 files in other folders)
